--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 }
 
 .explore-plus-logo img{
-    height: 40px;
+    height: 60%;
     position: relative;
     top: 10px;
 }
@@ -19,16 +19,18 @@
     max-width: 1000px;
     margin-left: auto; 
     margin-right: auto;
-    
-    
 }
 
-.main-header-container .search-product {
+
+.search-product {
+    height: 80%;
     display: inline-block;
-    height: 70%;
+    margin-left: 10px;
+    padding: 10px 0px;
+}
+
+.main-header-container input {
     width: 400px;
-    
     padding: 10px 10px;
-    margin-left: 20px;
-    margin-top: 0px;
+    
 }
