--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@
 /* Old Styles replaced */
 
 .main-header-container {
-    max-width: 1000px;
+    max-width: 970px;
     margin: 0 auto;
 }
 
@@ -60,7 +60,7 @@
 }
 
 .search-product-wrapper {
-    width: 450px;
+    width: 400px;
     position: relative;
     left: -20px;
 }
@@ -111,6 +111,7 @@
     top: 25px;
     left: -100px;
     display: none;
+    background-color: white;
 }
 
 .header-more .dropdown-list a { 
@@ -148,7 +149,7 @@
 .top-section-container {
     display: flex;
     justify-content: space-around;
-    margin: 10px 10px;
+    margin: 2px 10px;
 }
 
 .top-section-container img{
@@ -162,7 +163,7 @@
 
 .top-section-container > *{
     text-align: center;
-    padding: 10px 2px;
+    padding: 2px 2px;
 }
 
 
