--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@
 /* Old Styles replaced */
 
 .main-header-container {
-    max-width: 970px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -67,6 +67,7 @@
 
 .search-product-wrapper input{
     width: 100%;
+    height: 35px;
     padding: 10px;
 }
 
@@ -80,9 +81,10 @@
     background-color: white;
 }
 
-.header-become-selller-wrapper a {
+.header-become-selller-wrapper h4, .header-become-selller-wrapper a {
     text-decoration: none;
     color: white;
+    font-size: 16px;margin-top: 8px;
 }
 
 .primary-button {
@@ -98,6 +100,7 @@
     border: none;
     color: white;
     background-color: transparent;
+    margin-top: 4px;
 }
 
 .dropdown {
@@ -112,6 +115,7 @@
     left: -100px;
     display: none;
     background-color: white;
+    z-index: 11;
 }
 
 .header-more .dropdown-list a { 
@@ -130,14 +134,15 @@
     display: block;
 }
 
-.header-cart-wrapper {
-    color: white;
-    margin-left: 10px;
+.header-cart-wrapper h4{
+    margin-left: 10px;   
 }
 
 .header-cart-wrapper > *{
+    color: white;
     display: inline;
     padding-right: 4px;
+    font-size: 16px;
 }
 
 /* Top Section Styling */
@@ -149,7 +154,8 @@
 .top-section-container {
     display: flex;
     justify-content: space-around;
-    margin: 2px 10px;
+    margin: 8px 5px;
+    
 }
 
 .top-section-container img{
@@ -157,13 +163,27 @@
 }
 
 .top-section-container h4{
-    font-size: 12px;
+    font-size: 14px;
     margin-top: 5px;
 }
 
 .top-section-container > *{
     text-align: center;
     padding: 2px 2px;
+}
+
+
+/* Main body container styling */
+
+.main-body {
+    background-color: rgb(241, 243, 246);
+    border-top: 1px solid rgb(230, 229, 229);
+    z-index: -10;
+}
+
+.main-body-wrapper {
+    margin: 15px 5px;
+    
 }
 
 
